force-app/main/default/objects/FEC_Process_Action_History__c/FEC_Process_Action_History__c.object-meta.xml
<CustomObject>
    <label>Process Action History</label>
    <nameField>
        <label>Process Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Action History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>