force-app/main/default/objects/FEC_Process_Action_History__c/fields/FEC_Action_Result__c.field-meta.xml
<CustomField>
    <fullName>FEC_Action_Result__c</fullName>
    <description>Kết quả thực hiện Process Action</description>
    <label>Action Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>