force-app/main/default/objects/FEC_Process_Action_History__c/fields/FEC_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>