force-app/main/default/objects/FEC_Process_Action_History__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <description>Email người dùng thực hiện Process Action</description>
    <label>User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>