force-app/main/default/objects/FEC_Process_Action_History__c/fields/FEC_User_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Role__c</fullName>
    <description>Role của người dùng thực hiện Routing Action</description>
    <label>User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>